Refactor devcontainer setup and integrate PostgreSQL with Celery: add Dockerfile, docker-compose, and environment configurations; implement scheduler functionality and update requirements.

--- a/mcp-fast/.env.dev
+++ b/mcp-fast/.env.dev
@@ -1,4 +1,11 @@
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_HOST=
-POSTGRES_PORT=
+POSTGRES_HR_USER=postgres
+POSTGRES_HR_PASSWORD=postgres
+POSTGRES_HR_HOST=localhost
+POSTGRES_HR_PORT=5432
+
+POSTGRES_AGENT_USER=postgres
+POSTGRES_AGENT_PASSWORD=postgres
+POSTGRES_AGENT_HOST=localhost
+POSTGRES_AGENT_PORT=5432
+
+REDIS_CELERY_BROKER=redis://localhost:6379/0
