Implement OpenAI agent functionality and enhance database query tool: add agent loop, tool call processing, and environment configurations; update devcontainer and requirements.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,10 +15,13 @@
 				"ritwickdey.LiveServer"
 			]
 		}
-	}
+	},
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
+	"features": {
+		"ghcr.io/devcontainers/features/node:1": {},
+		"ghcr.io/itsmechlark/features/redis-server:1": {}
+	}
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// This can be used to network with other containers or with the host.
